--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
                 </ul>
             </div>
             <div class="main">
-                <ul class="emailList" id="emailList">
-                </ul>
-                <div class="emailBody" id="emailBody">
-                    
-                </div>
+                <ul class="emailList" id="emailList"></ul>
+                <div class="emailBody" id="emailBody"></div>
             </div>
 
         </div>
